--- a/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
@@ -27,9 +27,30 @@
         {
             if (more)
             {
-                <div class="iframe">
-                    <iframe src="@linkIframe" height="800" width="1200"></iframe>
-                </div>
+                <div class="row">
+    <div class="col-md-4">
+        <form action="@(_httpClient.BaseAddress)Studio/MovieUpload/@movie.MovieId/@movie.StudioId" enctype="multipart/form-data" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger">If it is not a movie or image correct MIME it
+                will not be uploaded.</div>
+
+            <div class="form-group">
+                <label asp-for="ImageFile" class="control-label">Image</label>
+                <input id="ImageFileUp" name="ImageFileUp" class="form-control" type="file" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="MovieFile" class="control-label">Movie</label>
+                <input id="MovieFileUp" name="MovieFileUp" class="form-control" type="file" />
+                <span asp-validation-for="MovieFile" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </form>
+        <span id="spnMessage"></span>
+    </div>
+</div>
 
             }
             else
@@ -98,7 +119,7 @@
                             <div>If your upload more 500MB click this button</div>
                             @*<button class="btn btn-primary" type="submit" @onclick="@Upload">Upload</button>*@
                             <div class="button input-box">
-                                <input type="submit" value="Confirm"@onclick="@Upload">
+                                <input type="submit" value="For app version no limited if web version click this button for upload file more then 500MB"@onclick="@Upload">
                             </div>
                         </div>
                     </div>
