--- a/BlazorMovie/MovieClient/Pages/MovieCustomer.razor
+++ b/BlazorMovie/MovieClient/Pages/MovieCustomer.razor
@@ -117,7 +117,7 @@
             } @*end else*@
 
         </div>
-         <a class="text-center w-100 d-block mt-4 font-weight-bold" style="cursor: pointer;" @onclick="LoadMore">See more Feedbacks</a>
+         <a class="text-center w-100 d-block mt-4 font-weight-bold" style="cursor: pointer;" @onclick="LoadMore">See more...</a>
 
     </div>
 </body>
