--- a/BlazorMovie/MovieClient/Pages/ReadFeedBack.razor
+++ b/BlazorMovie/MovieClient/Pages/ReadFeedBack.razor
@@ -39,13 +39,6 @@
                                             </a>
                                             <div class="media-body">
                                                 <div class="reviews-members-header">
-                                                    @*<span class="star-rating float-right">
-                                                        <a href="#"><i class="icofont-ui-rating active"></i></a>
-                                                        <a href="#"><i class="icofont-ui-rating active"></i></a>
-                                                        <a href="#"><i class="icofont-ui-rating active"></i></a>
-                                                        <a href="#"><i class="icofont-ui-rating active"></i></a>
-                                                        <a href="#"><i class="icofont-ui-rating"></i></a>
-                                                    </span>*@
                                                     <h6 class="mb-1"><a class="text-black" href="#">@item.Name</a></h6>
                                                     <p class="text-gray">@item.Email</p>
                                                 </div>
@@ -55,34 +48,8 @@
                                                     </p>
                                                 </div>
                                                 <div class="reviews-members-footer">
-                                                    <a class="total-like" href="#"><i class="icofont-thumbs-up"></i>Like</a> 
-                                                    <a class="total-like" href="#"><i class="icofont-thumbs-down"></i>Dislike</a>
-                                                    @*<span class="total-like-user-main ml-2" dir="rtl">
-                                                        <a data-toggle="tooltip" data-placement="top" title="" href="#"
-                                                   data-original-title="Gurdeep Osahan">
-                                                            <img alt="Generic placeholder image"
-                                                         src="http://bootdey.com/img/Content/avatar/avatar5.png"
-                                                         class="total-like-user rounded-pill">
-                                                        </a>
-                                                        <a data-toggle="tooltip" data-placement="top" title="" href="#"
-                                                   data-original-title="Gurdeep Singh">
-                                                            <img alt="Generic placeholder image"
-                                                         src="http://bootdey.com/img/Content/avatar/avatar2.png"
-                                                         class="total-like-user rounded-pill">
-                                                        </a>
-                                                        <a data-toggle="tooltip" data-placement="top" title="" href="#"
-                                                   data-original-title="Askbootstrap">
-                                                            <img alt="Generic placeholder image"
-                                                         src="http://bootdey.com/img/Content/avatar/avatar3.png"
-                                                         class="total-like-user rounded-pill">
-                                                        </a>
-                                                        <a data-toggle="tooltip" data-placement="top" title="" href="#"
-                                                   data-original-title="Osahan">
-                                                            <img alt="Generic placeholder image"
-                                                         src="http://bootdey.com/img/Content/avatar/avatar4.png"
-                                                         class="total-like-user rounded-pill">
-                                                        </a>
-                                                    </span>*@
+                                                    <a class="total-like" ><i class="icofont-thumbs-up"></i>Like</a> 
+                                                    <a class="total-like" ><i class="icofont-thumbs-down"></i>Dislike</a>
                                                 </div>
                                             </div>
                                         </div>
