--- a/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
@@ -28,40 +28,40 @@
         {
             if (more)
             {
-<<<<<<< Updated upstream
-                <div class="container" style="width=720px; height=480px">
-    <div class="row">
-        <div class="col-md-4">
-            <form action="@(_httpClient.BaseAddress)Admin/MovieUpload/@movie.MovieId/@movie.StudioId" enctype="multipart/form-data" method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger">
-                    If it is not a movie or image correct MIME it
-                    will not be uploaded.
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <form action="@(_httpClient.BaseAddress)Admin/MovieUpload/@movie.MovieId/@movie.StudioId" enctype="multipart/form-data" method="post">
+                                <div asp-validation-summary="ModelOnly" class="text-danger">
+                                    If it is not a movie or image correct MIME it
+                                    will not be uploaded.
+                                </div>
+
+                                <div class="form-group">
+                                    <label asp-for="ImageFile" class="control-label">Image</label>
+                                    <input id="ImageFileUp" name="ImageFileUp" class="form-control" type="file" />
+                                    <span asp-validation-for="ImageFile" class="text-danger"></span>
+                                </div>
+
+                                <div class="iframe">
+                                    <iframe src="@linkIframe"></iframe>
+                                </div>
+
+                                <div class="form-group">
+                                    <label asp-for="MovieFile" class="control-label">Movie</label>
+                                    <input id="MovieFileUp" name="MovieFileUp" class="form-control" type="file" />
+                                    <span asp-validation-for="MovieFile" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="submit" value="Save" class="btn btn-primary" />
+                                </div>
+                            </form>
+                            <span id="spnMessage"></span>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="form-group">
-                    <label asp-for="ImageFile" class="control-label">Image</label>
-                    <input id="ImageFileUp" name="ImageFileUp" class="form-control" type="file" />
-                    <span asp-validation-for="ImageFile" class="text-danger"></span>
-=======
-                <div class="iframe">
-                    <iframe src="@linkIframe" height="720" width="1200"></iframe>
->>>>>>> Stashed changes
-                </div>
-                <div class="form-group">
-                    <label asp-for="MovieFile" class="control-label">Movie</label>
-                    <input id="MovieFileUp" name="MovieFileUp" class="form-control" type="file" />
-                    <span asp-validation-for="MovieFile" class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
-                </div>
-            </form>
-            <span id="spnMessage"></span>
-        </div>
-    </div>
-</div>
-                
             }
             else
             {
