--- a/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
@@ -28,9 +28,9 @@
         {
             if (more)
             {
-                <div class="container">
+                
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md">
                             <form action="@(_httpClient.BaseAddress)Admin/MovieUpload/@movie.MovieId/@movie.StudioId" enctype="multipart/form-data" method="post">
                                 <div asp-validation-summary="ModelOnly" class="text-danger">
                                     If it is not a movie or image correct MIME it
@@ -43,9 +43,9 @@
                                     <span asp-validation-for="ImageFile" class="text-danger"></span>
                                 </div>
 
-                                <div class="iframe">
+                               @* <div class="iframe">
                                     <iframe src="@linkIframe"></iframe>
-                                </div>
+                                </div>*@
 
                                 <div class="form-group">
                                     <label asp-for="MovieFile" class="control-label">Movie</label>
@@ -60,7 +60,7 @@
                             <span id="spnMessage"></span>
                         </div>
                     </div>
-                </div>
+               
 
             }
             else
