--- a/BlazorMovie/MovieClient/Pages/MovieCustomer.razor
+++ b/BlazorMovie/MovieClient/Pages/MovieCustomer.razor
@@ -16,13 +16,13 @@
     <div class="container p-0">
 
         <button @onclick="GenreSortParm" class="btn btn-primary float-right mt-n1" style="margin: 3%; width: 117px">
-            <i class="fas fa-plus"></i>Movie Genre
+            Movie Genre
         </button>
         <button @onclick="NameSortParm" class="btn btn-primary float-right mt-n1" style="margin: 3%; width: 117px">
-            <i class="fas fa-plus"></i>Movie Name
+            Movie Name
         </button>
         <button @onclick="DateSortParm" class="btn btn-primary float-right mt-n1" style="margin: 3%; width: 117px">
-            <i class="fas fa-plus"></i>Movie Date
+            Movie Date
         </button>
         <h1 class="h3 mb-3">Projects Movie</h1>
         <div class="input-group mb-3" style="margin-right: 5%">
