--- a/BlazorMovie/MovieClient/Pages/BuyVip.razor
+++ b/BlazorMovie/MovieClient/Pages/BuyVip.razor
@@ -49,16 +49,16 @@
                                         <div class="row" style="margin:5px">
                                             @if (movieId != null)
                                             {
-                                                <div class="col-sm">Only this movie <InputRadio Value="0" /></div>
+                                                <div class="col-sm">Only this movie (4,99$) <InputRadio Value="0" /></div>
                                             }
 
-                                            <div class="col-sm">1 month <InputRadio checker Value="1" /> </div>
+                                            <div class="col-sm">1 month (9.99$) <InputRadio checker Value="1" /> </div>
 
-                                            <div class="col-sm">3 month <InputRadio Value="3" /></div>
+                                            <div class="col-sm">3 month (27.49$) <InputRadio Value="3" /></div>
 
-                                            <div class="col-sm">6 month <InputRadio Value="6" /></div>
+                                            <div class="col-sm">6 month (49.99$) <InputRadio Value="6" /></div>
 
-                                            <div class="col-sm">12 month <InputRadio Value="12" /></div>
+                                            <div class="col-sm">12 month (97.49$) <InputRadio Value="12" /></div>
                                         </div>
                                         <div class="row">
                                             <div class="col-md align-self-center" style="margin:5px">
