fix load more comment

--- a/BlazorMovie/MovieClient/Pages/WatchCustomer.razor
+++ b/BlazorMovie/MovieClient/Pages/WatchCustomer.razor
@@ -165,7 +165,8 @@
 
 
 
-                            <a class="text-center w-100 d-block mt-4 font-weight-bold" style="font-size:13px" href="#">See more Comments</a>
+                            <a class="text-center w-100 d-block mt-4 font-weight-bold" style="font-size:13px; cursor: pointer;" @onclick="LoadMore">See more Comments</a>
+
                         </div>
                     </div>
                 </div>
