--- a/BlazorMovie/MovieClient/Pages/DeleteMovieAdmin.razor.css
+++ b/BlazorMovie/MovieClient/Pages/DeleteMovieAdmin.razor.css
@@ -21,3 +21,25 @@
   border: 1px solid #e5e9f2;
   border-radius: 0.2rem;
 }
+
+.card-body {
+    width: 480px
+}
+
+@media(max-width: 720px) {
+    .card-body {
+        width: 480px
+    }
+}
+
+@media(max-width: 1500px) {
+    .card-body {
+        width: 720px
+    }
+}
+
+@media(max-width: 480px) {
+    .card-body {
+        width: 100%
+    }
+}
