--- a/BlazorMovie/MovieClient/Pages/DeleteMovieStudio.razor.css
+++ b/BlazorMovie/MovieClient/Pages/DeleteMovieStudio.razor.css
@@ -22,3 +22,23 @@
   border-radius: 0.2rem;
   width: 100%;
 }
+
+.card-body{
+    width: 480px
+}
+
+@media(max-width: 720px){
+    .card-body{
+        width: 480px
+    }
+}
+@media(max-width: 1500px) {
+    .card-body {
+        width: 720px
+    }
+}
+@media(max-width: 480px) {
+    .card-body {
+        width: 100%
+    }
+}
