--- a/BlazorMovie/MovieClient/Shared/MainLayout.razor.css
+++ b/BlazorMovie/MovieClient/Shared/MainLayout.razor.css
@@ -54,9 +54,9 @@ main {
 
   .sidebar {
     height: 100vh;
-    position: sticky;
+    /*position: sticky;*/
     top: 0;
-    width: 250px;
+    /*width: 250px;*/
   }
 
   .top-row {
