--- a/BlazorMovie/MovieClient/Pages/SalaryStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/SalaryStudio.razor
@@ -51,7 +51,7 @@
                         <div class="card">
                             <div class="card-header">Salary Studio</div>
                             <div class="card-body">
-                                <form action="" method="">
+                                
                                     <div class="form-group row">
                                         <label class="col-md-4 col-form-label text-md-right">Email</label>
                                         <div class="col-md-8">
@@ -72,11 +72,11 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6 offset-md-4">
-                                        <button type="submit" class="btn btn-primary" @onclick="Submit">
+                                        <button class="btn btn-primary" @onclick="Submit">
                                             Submit
                                         </button>
                                     </div>
-                                </form>
+                                
 
                             </div>
 
