--- a/BlazorMovie/MovieClient/Pages/SalaryStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/SalaryStudio.razor
@@ -5,10 +5,10 @@
 @attribute [Authorize(Roles = "Studio")]
 @using System.Text.RegularExpressions
 
-	@if (showAlert)
-{
+@*	@if (showAlert)
+    {
     <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
-}
+    }*@
 
 @*<div>Email</div>
     <input @bind="@Email" type="email" required>
@@ -51,32 +51,42 @@
                         <div class="card">
                             <div class="card-header">Salary Studio</div>
                             <div class="card-body">
-                                <form action="" method="">
-                                    <div class="form-group row">
-                                        <label class="col-md-4 col-form-label text-md-right">Email</label>
-                                        <div class="col-md-8">
-                                            <input type="text" @bind="@Email" class="form-control" required autofocus>
-                                        </div>
-                                    </div>
 
+                                <div class="form-group row">
+                                    <label class="col-md-4 col-form-label text-md-right">Email</label>
+                                    <div class="col-md-8">
+                                        <input type="text" @bind="@Email" class="form-control" required autofocus>
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label class="col-md-4 col-form-label text-md-right">Confirm Email</label>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control" @bind="@EmailConfirm" required>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-md-4 col-form-label text-md-right">Cash</label>
+                                    <div class="col-md-8">
+                                        <input type="number" class="form-control" step="1" @bind="@Cash" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 offset-md-4">
+                                    <button class="btn btn-primary" @onclick="Submit">
+                                        Submit
+                                    </button>
+                                </div>
+
+                                @if (showAlert)
+                                {
                                     <div class="form-group row">
-                                        <label class="col-md-4 col-form-label text-md-right">Confirm Email</label>
-                                        <div class="col-md-8">
-                                            <input type="text" class="form-control" @bind="@EmailConfirm" required>
+                                        <div class="col-md">
+                                            <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
                                         </div>
                                     </div>
-                                    <div class="form-group row">
-                                        <label class="col-md-4 col-form-label text-md-right">Cash</label>
-                                        <div class="col-md-8">
-                                            <input type="number" class="form-control" step="0.01" @bind="@Cash" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 offset-md-4">
-                                        <button type="submit" class="btn btn-primary" @onclick="Submit">
-                                            Submit
-                                        </button>
-                                    </div>
-                                </form>
+                                }
+
+
 
                             </div>
 
