--- a/BlazorMovie/MovieClient/Pages/Profile.razor
+++ b/BlazorMovie/MovieClient/Pages/Profile.razor
@@ -56,9 +56,9 @@
 								</div>
 								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 									<div class="form-group">
-										<label>Email</label>
+										<label><span style="color:red">Email</span></label>
 										<input type="email" class="form-control"
-											placeholder="@accountManagementModel.Email"
+											placeholder="@accountManagementModel.Email" style="pointer-events:none"
 											@bind="@accountManagementModel.Email">
 									</div>
 								</div>
