--- a/BlazorMovie/MovieClient/Pages/WatchCustomer.razor
+++ b/BlazorMovie/MovieClient/Pages/WatchCustomer.razor
@@ -71,8 +71,8 @@
 
             <div class="col-md-7">
                         <div class="embed-responsive embed-responsive-16by9 shadow-sm">
-                            <video @onplay="View" width="640" height="360" controlsList=”nodownload” controls="" class="rounded">
-                                <source src="@movieLink" type="video/mp4" @onplay="View">
+                            <video @onplay="async () => await View()" width="640" height="360" controlsList=”nodownload” controls="" class="rounded">
+                                <source src="@movieLink" type="video/mp4" @onplay="async () => await View()">
                             </video>
                         </div>
                         <div class="project-info-box shadow-sm">
